# socrata-roulette

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build_tailwind.sh  deploy.sh  index.html  tailwind.config.js
resources/test/: ddn_response.json  socrata_resource.json
src/: ddn.rs  main.rs
src/components/: dataset_info.rs  mod.rs  query_button.rs  query_embed.rs  query_state.rs  random_query.rs
src/query_gen/: mod.rs  query.rs  socrata.rs
