[package]
name = "socrata-roulette"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
gloo-net = "0.2.5"
itertools = "0.10.5"
percent-encoding = "2.2.0"
rand = "0.8.5"
regex = "1.7.0"
serde = "1.0.148"
serde-enum-str = "0.2.5"
serde_derive = "1.0.148"
serde_json = "1.0.89"
wasm-bindgen-futures = "0.4.33"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[profile.release]
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# link time optimization using using whole-program analysis
lto = true
# optimization for size ( more aggressive )
opt-level = 'z'
# less code to include into binary
panic = 'abort'
